# grenadiers

./: .gitignore  :w  CMakeLists.txt  ]  imgui.ini  notes.txt
assets/models/: circle.model  quad.model
assets/shaders/: base.frag  base.vert  bg_mesh.frag  blur.frag  inertia_zone.frag  post.frag  screen.vert  terrain.frag  terrain.vert
org/: 2017-03-03.plan  2017-03-30.plan  2017-03-31.plan  2018-03-31.plan  2018-04-02.plan  2018-04-03.plan  2018-04-06.plan  2018-04-07.plan  2018-04-08.plan  2018-04-09.plan  2018-04-10.plan  2018-04-14.plan  notes.txt
org/plan/: 2018-03-30.plan  2018-04-03.plan  2018-04-04.plan  2018-04-07.plan  2018-04-12.plan  2018-04-14.plan  2018-04-26.plan
src/: Camera.hpp  CameraSystem.cpp  CameraSystem.hpp  Console.cpp  Console.hpp  ControllerData.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  Grenade.cpp  Grenade.hpp  GrenadeSystem.cpp  GrenadeSystem.hpp  Joystick.hpp  Model.cpp  Model.hpp  Player.cpp  Player.hpp  PlayerSystem.cpp  PlayerSystem.hpp  Powerup.hpp  PowerupSystem.cpp  PowerupSystem.hpp  Projectile.cpp  Projectile.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  Projectiles.hpp  Random.cpp  Random.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Terrain.cpp  Terrain.hpp  TimescaleSystem.cpp  TimescaleSystem.hpp  Trajectory.cpp  (+10 more)
src/Renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  BaseRenderer.cpp  BaseRenderer.hpp  BeamRenderer.cpp  BeamRenderer.hpp  GrenadeRenderer.cpp  GrenadeRenderer.hpp  PlayerRenderer.cpp  PlayerRenderer.hpp  PowerupRenderer.cpp  PowerupRenderer.hpp  ProjectileRenderer.cpp  ProjectileRenderer.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TimescaleZoneRenderer.cpp  TimescaleZoneRenderer.hpp
